--- a/books/850b20937af93b/13-3.md
+++ b/books/850b20937af93b/13-3.md
@@ -10,6 +10,6 @@ title: "13.3 演習問題"
 
 [^1]: 訳注: isomorphismだったのですが、射と訳してしまうと単位元の保存も要請されてしまうので、単に集合の全単射のことだよねとおもってこう訳していあす。
 [^2]: 訳注: 本当かなと思ってやってみましたがちゃんと示せました: https://twitter.com/ashiato45/status/1396093603072540676
-[^3]: 「無駄に思えるかもしれない」と言っているので大丈夫だと思いますが、結局「単位元を保たなければいけない」という条件は無駄ではなくて、全単射でなければこの演習問題のようなことは成り立ちません。例えば、自然数に加算を入れたモノイドをA、自然数のペアに$(a, b)\cdot (c, d) = (a+b, c\cdot d)$という演算を入れたモノイドをBとして($A$の単位元は0で、$B$の単位元は$(0, 1)$です)、モノイド準同型$f\colon A\to B$を$f(a)=(a, 0)$で定めると、$f(0)=(0, 0)$は$f(A)$の単位元ですが$B$の単位元ではありません。
+[^3]: 訳注:「無駄に思えるかもしれない」と言っているので大丈夫だと思いますが、結局「単位元を保たなければいけない」という条件は無駄ではなくて、全単射でなければこの演習問題のようなことは成り立ちません。例えば、自然数に加算を入れたモノイドをA、自然数のペアに$(a, b)\cdot (c, d) = (a+b, c\cdot d)$という演算を入れたモノイドをBとして($A$の単位元は0で、$B$の単位元は$(0, 1)$です)、モノイド準同型$f\colon A\to B$を$f(a)=(a, 0)$で定めると、$f(0)=(0, 0)$は$f(A)$の単位元ですが$B$の単位元ではありません。
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
