--- a/books/850b20937af93b/3-3.md
+++ b/books/850b20937af93b/3-3.md
@@ -4,7 +4,7 @@ title: "3.3 順序"
 
 今度は全く違うものだ！射が対象たちの関係、一方が他方以下であるという関係、であるような圏だ。これが本当に圏かどうか確かめよう。まず恒等射があるだろうか？各対象は自分自身以下である。確かめよ！合成を持つだろうか？もし$a \leqslant b$で$b\leqslant c$であれば$a\leqslant c$である。確かめよ！合成は結合的であるか？確かめよ！このような関係を備えた集合を**前順序**(preorder)という。つまり前順序は確かに圏である。
 
-より強い関係として、もし$a\leqslant b$かつ$b\leqslant a$であれば$a$は$bと一致しなければならないという追加の条件を満たすものを考えることもできる。これは**半順序**(partial order)と呼ばれる。
+より強い関係として、もし$a\leqslant b$かつ$b\leqslant a$であれば$a$は$b$と一致しなければならないという追加の条件を満たすものを考えることもできる。これは**半順序**(partial order)と呼ばれる。
 
 最後に、いかなる二つの対象もそれらの間かならずどちらか向きの関係があるという条件を課すこともできる。これにより**線形順序**(linear order)とか**全順序**(total order)が与えられる。
 
