--- a/books/850b20937af93b/3-6.md
+++ b/books/850b20937af93b/3-6.md
@@ -7,7 +7,7 @@ title: "3.6 演習問題"
 (a) 一つのノードを持ちエッジを持たないグラフ。
 (b) 一つのノードを持ち、一つの向きつきのエッジを持つグラフ。（ヒント ：この辺は自分自身と合成できる）
 (c) 二つのノードを持ち、それらの間の一つの矢印を持つグラフ。
-(d) 一つのノードを持ち、アルファベットa, b, c,\ldots, zでラベルづけられrた26個の射を持つ。
+(d) 一つのノードを持ち、アルファベット$a, b, c,\ldots, z$でラベルづけられrた26個の射を持つ。
 
 2. 以下はどのような順序か
 (a) 包含関係を持つ集合の集合。AがBに含まれるとは、任意のAの要素がまたBの要素であること。
