wrong symbol for inline code

--- a/books/850b20937af93b/3-6.md
+++ b/books/850b20937af93b/3-6.md
@@ -11,11 +11,11 @@ title: "3.6 演習問題"
 
 2. 以下はどのような順序か
 (a) 包含関係を持つ集合の集合。AがBに含まれるとは、任意のAの要素がまたBの要素であること。
-(b) C++の型に対する以下のサブタイプ関係。'T1'が'T2'のサブタイプであるとは、コンパイルエラーを起こすことなく'T1'のポインタを'T2'のポインタのための関数に渡すことができることをいう。
+(b) C++の型に対する以下のサブタイプ関係。`T1`が`T2`のサブタイプであるとは、コンパイルエラーを起こすことなく`T1`のポインタを`T2`のポインタのための関数に渡すことができることをいう。
 
-3. 'Bool&を二つの値'True'と'False'を持つ集合と考えたとき、'&&' (AND)と'||' (OR)の二つの演算についてそれぞれが集合としてのモノイドをなすことを示せ。
+3. `Bool`を二つの値`True`と`False`を持つ集合と考えたとき、`&&` (AND)と`||` (OR)の二つの演算についてそれぞれが集合としてのモノイドをなすことを示せ。
 
-4. AND演算子による'Bool'モノイドを圏として表現せよ。射とその合成規則を列挙せよ。
+4. AND演算子による`Bool`モノイドを圏として表現せよ。射とその合成規則を列挙せよ。
 
 5. 3を法とした加法をモノイド圏として表現せよ。
 
