add: 7-3 first draft

--- a/books/850b20937af93b/7-1.md
+++ b/books/850b20937af93b/7-1.md
@@ -314,7 +314,7 @@ std::copy( std::begin(w)
 (->) a b
 ```
 
-2つ以上の引数をとる関数は部分適用ができたように，arrow に引数の型を1つだけ部分適用することもできて．その場合 arrow は2つ目の引数が来ることを期待するので，
+2つ以上の引数をとる関数は部分適用ができたように，arrow に引数の型を1つだけ部分適用できて，その場合 arrow は2つ目の引数が来ることを期待するので，
 
 ```haskell
 (->) a
