--- a/books/850b20937af93b/7-1.md
+++ b/books/850b20937af93b/7-1.md
@@ -2,7 +2,7 @@
 title: "7.1 プログラムにおける関手"
 ---
 
-現実的なプログラミングの話に移ろう．我々は型の圏と関手という道具を持っている．ここで，型の圏をそれ自身にマッピングする関手（**自己関手** (endofunctor)）について考えてみよう．型の圏の自己関手とはどんなものだろうか？ まず第1に，型を型にマッピングするだろう．意識していないかもしれないが，このようなマッピングをすでに知っているはずだ．これから，型をパラメータにもつ型の定義について話していこう．
+現実的なプログラミングの話に移ろう．我々は型の圏と関手という道具を持っている．ここで，型の圏をそれ自身にマッピングする関手（**自己関手** (endofunctor)）について考えてみよう．型の圏の自己関手とはどんなものだろうか？ まず第1に，型を型にマッピングするだろう．意識していないかもしれないが，このようなマッピングを我々はすでに知っているはずだ．型をパラメータにもつ型として定義されるものがそれである．いくつか例を見ていこう．
 
 # Maybe Functor
 `Maybe` は，型 `a` を型 `Maybe`型にマッピングする．
@@ -11,13 +11,13 @@ title: "7.1 プログラムにおける関手"
 data Maybe a = Nothing | Just a
 ```
 
-`Maybe` 自体は型ではなく，$型コンストラクタ$ だというのが巧妙な部分だ．`Int` や `Bool` といった型を引数として与える必要がある．引数なしの `Maybe` は型の関数という意味になる．しかし，この `Maybe` は関手になるのだろうか？ （以降，functor は基本的にプログラミングの意味での functor とし，ほとんどのケースで 自己関手の意味で用いる．） functor はオブジェクト（ここでは型）だけでなく射（ここでは関数）もマッピングする．型 `a` から型 `b` への関数
+`Maybe` それ自体は型ではなく，**型コンストラクタ** だというのが巧妙な部分だ．`Int` や `Bool` といった型を引数として与える必要がある．引数なしの `Maybe` は型の関数という意味になる．しかし，この `Maybe` は関手なのだろうか？ （以降では関手という単語をプログラミングの文脈での関手（そしてほとんどの場合は自己関手）として使うことにする．）関手は対象（ここでは型）だけでなく射（ここでは関数）もマッピングするので，型 `a` から型 `b` への関数 `f` から，`Maybe a` から `Maybe b` への関数をつくりたい．
 
 ```haskell
 f :: a -> b
 ```
 
-から，`Maybe a` から `Maybe b` への関数をつくりたいのだ．このような関数を定義するのに，2つの `Maybe` コンストラクタに対応する2つのケースを考えていく．引数が `Nothing` の場合は簡単で，単に `Nothing` を返すだけだ．引数が `Just` の場合は，`Just` の中身に関数 `f` を適用する．したがって `Maybe` ファンクタによる関数 `f` の像は，こうなる．
+このような関数を定義するには，2つの `Maybe` コンストラクタに対応する2つのケースを考える．引数が `Nothing` の場合は簡単で，単に `Nothing` を返すだけでよい．引数が `Just` の場合は，`Just` の中身に関数 `f` を適用する．したがって `Maybe` ファンクタによる関数 `f` の像は次のようになる．
 
 ```haskell
 f' :: Maybe a -> Maybe b
@@ -32,7 +32,7 @@ fmap :: (a -> b) -> (Maybe a -> Maybe b)
 ```
 ![](https://storage.googleapis.com/zenn-user-upload/nmvd0y36w1dkvj5nad3hdlhyg61j)
 
-しばしば，`fmap` は関数を「持ち上げる」と表現される．持ち上げられた関数は `Maybe` された値の関数になる．このシグネチャはカリー化の考え方をつかって2通りに解釈できる．引数が `(a -> b)` で返り値が `(Maybe a -> Maybe b)` の関数という解釈か，あるいは引数が2つで `Maybe b` を返す関数という解釈である．
+しばしば，`fmap` は関数を「持ち上げる」と表現される．持ち上げられた関数は `Maybe` された値の間の関数になる． `fmap` のシグネチャはカリー化の考え方を用いて2通りに解釈できる．引数が `(a -> b)` で返り値が `(Maybe a -> Maybe b)` の関数という解釈か，あるいは引数を2つ取って `Maybe b` を返す関数という解釈である．
 
 ```haskell
 fmap :: (a -> b) -> Maybe a -> Maybe b
@@ -49,13 +49,13 @@ fmap f (Just x) = Just (f x)
 
 # 等式推論 (Equational Reasoning)
 
-関手性を確認するのに，Haskell でよく登場する証明テクニックである **等式推論** (equational reasoning) を使ってみることにする．これは Haskell の関数が等式の形で定義されていることを利用している．変数名が衝突しないように名前を変える必要があるかもしれないが，左辺の形と右辺の形に書き換えることができるということだ．これは，関数をインライン化したり，逆に式 (expression) を関数にリファクタリングすることに対応する．恒等関数を例にしてみよう．
+関手性を確認するのに，Haskell でよく登場する証明テクニックである **等式推論** (equational reasoning) を使ってみることにする．これは Haskell の関数が等式の形で定義されていることを利用している．変数名が衝突しないように名前を変える必要があるかもしれないが，左辺の形と右辺の形に書き換えることができるということだ．これは関数のインライン化や，式 (expression) から関数へのリファクタリングに対応する．恒等関数を例にしてみよう．
 
 ```haskell
 id x = x
 ```
 
-式の中に `id y` という部分を見つけたら，それは `y` と置き換え（インライン化）できるということだ．あるいは， `id (y + 2)` のように `id` が式に適用されているのを見つけたら，その部分は式自体である `(y + 2)` に置き換えできるということだ．この置き換えは双方向に行えるので，任意の式 `e` を `id e` に置き換え（リファクタリング）することもできる．関数がパターンマッチングの形で定義されている場合は，各々のパターンを独立に使える．例えば，上で定義した `fmap` の場合，`fmap f Nothing` は `Nothing` に置き換えられるし，その逆も可能である．これが実用上どのように働くか見てみよう．恒等関数の保存からスタートする．
+式の中に `id y` という部分を見つけたら，それは `y` と置き換え（インライン化）できるということだ．あるいは， `id (y + 2)` のように `id` が式に適用されているのを見つけたら，その部分は式自体である `(y + 2)` に置き換えできるということだ．この置き換えは双方向に行えるので，任意の式 `e` を `id e` に置き換える（リファクタリングする）こともできる．関数がパターンマッチングの形で定義されている場合は，各々のパターンを独立に使える．例えば，上で定義した `fmap` の場合，`fmap f Nothing` は `Nothing` に置き換えられるし，その逆も可能である．これが実用上どのように働くか見てみよう．恒等関数の保存からスタートする．
 
 ```haskell
 fmap id = id
@@ -139,7 +139,7 @@ double y = counter() * counter();
 となるが，この変換は明らかに正しくないし，実行結果も異なる．にもかかわらず C++ コンパイラは，`square` をマクロで定義した場合にはこのような等式推論を試みて，悲惨な結果になる．
 
 # Optional
-Haskell では関手を表現するのは容易だが，ジェネリックプログラミングが可能で高階関数をサポートしていればどんな言語でも定義できる．ためしに，Haskell の `Maybe` のようなものを C++ の型テンプレート `optional` で作ってみよう．実装の概略を以下に示す．（実際には，渡される引数に対する様々な処理や，コピーセマンティクス，C++ 特有のリソース管理などのために，もっと複雑になる．）
+Haskell では関手を表現するのは容易だが，ジェネリックプログラミングが可能で高階関数をサポートしていればどんな言語でも定義できる．ためしに，Haskell の `Maybe` のようなものを C++ の型テンプレート `optional` で作ってみよう．実装の概略を以下に示す．（実際には，渡される引数に対する様々な処理，コピーセマンティクス，C++ 特有のリソース管理などのために，より複雑になる．）
 
 ```cpp
 template<class T>
@@ -176,7 +176,7 @@ optional<B> fmap(std::function<B(A)> f, optional<A> opt) {
         return optional<B>{ f(opt.val()) };
 }
 ```
-`fmap` を，`optional` のテンプレートメソッドとして書くこともできる．This embarrassment of choices makes abstracting the functor pattern in C++ a problem. 関手はインターフェースとして継承されなければならないのだろうか？（不幸なことにテンプレート仮想関数は無い．）カリー化するのとしないのとではどちらがよいのだろう？ C++ コンパイラは型を正しく推論できるだろうか，あるいは型推論を期待せずに指定すべきだろうか． `int` をとり `bool` を返す関数 `f` が入力されるという状況を考えてみよう．コンパイラはどのようにして `g` の型を見つけるのだろうか．
+`fmap` を，`optional` のテンプレートメソッドとして書くこともできる．このように C++ での関手のパターンには選択肢が多すぎて問題になる．関手をインターフェースとして継承すべきか？（不幸なことにテンプレート仮想関数は無い．）カリー化するのとしないのとではどちらがよいのだろう？ C++ コンパイラは型を正しく推論できるだろうか？ あるいは型推論を期待せずに指定すべきだろうか？ `int` をとり `bool` を返す関数 `f` が入力されるという状況を考えてみよう．コンパイラはどのようにして `g` の型を見つけるのだろうか．
 
 ```cpp
 auto g = fmap(f);
@@ -184,13 +184,13 @@ auto g = fmap(f);
 特に，今後 `fmap` をオーバーロードする関手が増えていったらどうなるだろう？（しかも，すぐにそうなるのだ．）
 
 # 型クラス (Typeclasses)
-Haskell では，どうやって関手をとりあつかっているのだろうか？ 型クラスが，その答えである．型クラスは，共通のインターフェースを持つ型をひとまとめにして定義する．例えば，等号を持つ対象のクラスは次のように定義される．
+Haskell では，どうやって関手をとりあつかっているのだろうか？ 型クラスがその答えである．型クラスは，共通のインターフェースを持つ型をひとまとめにして定義する．例えば，等号を持つ対象のクラスは次のように定義される．
 
 ```haskell
 class Eq a where
     (==) :: a -> a -> Bool
 ```
-この定義は，「型 `a` の引数を二つとって `Bool` を返す (==) という演算子をサポートするならば，型 `a` は `Eq` クラスである」と言っている．Haskell 対して，特定の型が `Eq` であると伝えるには，それがこのクラスの**インスタンス**だという宣言と， (==) の実装が必要ということだ．例えば，2D の点を表現する `Point` （二つの `Float` の直積型）があったとすると，
+この定義は，「型 `a` の引数を二つとって `Bool` を返す (==) という演算子がサポートされているならば，型 `a` は `Eq` クラスである」と言っている．Haskell 対して，特定の型が `Eq` であると伝えるには，その型がクラス `Eq` の**インスタンス**だという宣言と， (==) の実装が必要ということだ．例えば，2D の点を表現する `Point` （二つの `Float` の直積型）があったとすると，
 
 ```haskell
 data Point = Pt Float Float
@@ -202,18 +202,13 @@ instance Eq Point where
   (Pt x y) == (Pt x' y') = x == x' && y == y'
 ```
 
-ここでは， `(==)` を中置演算子として，`(Pt x y)` と `(Pt x' y')` の間に置いた．関数の本体は等号の後ろである．ひとたび `Point` を `Eq` クラスのインスタンスとして宣言してしまえば，点が等しいかどうかを直接的に比較することができるようになる．ここで気を付けたいのは，C++ や Java と違って， `Point` 型の定義においてそれが `Eq` クラス（あるいはインターフェース）であることを記述する必要は無い．クライアントコードのなかで後から宣言してもかまわないのだ．型クラスは関数（と演算子）をオーバーロードするための， Haskell 固有の仕組みである．我々は異なる関手に対して `fmap` をオーバーロードしたいのだが，ここでややこしいのは，関手は型ではなく型のマッピングとして定義したい，ということだ．`Eq` のときもそうだったが，我々がほしいのは型の集まりではなく，型コンストラクタなのだ．ありがたいことに Haskell の型クラスは，型と型コンストラクタ
-We need a type-class that’s not a family of types, as was the case with Eq, but a family of
-type constructors. 
-
-Fortunately a Haskell typeclass works with type constructors as well as with types.
-So here’s the definition of the Functor class:
+ここでは， `(==)` を中置演算子として`(Pt x y)` と `(Pt x' y')` の間に置いた．関数の本体は等号の後ろである．ひとたび `Point` を `Eq` クラスのインスタンスとして宣言してしまえば，点が等しいかどうかを直接的に比較することができるようになる．ここで気を付けたいのは，C++ や Java と違って， `Point` 型の定義においてそれが `Eq` クラス（あるいはインターフェース）であることを記述する必要は無い．クライアントコードのなかで後から宣言してもかまわないのだ．型クラスは関数（と演算子）をオーバーロードするための， Haskell 固有の仕組みである．我々は異なる関手に対して `fmap` をオーバーロードしたいのだが，ここでややこしいのは，関手を型ではなく，型のマッピングとして定義したいということだ．`Eq` のときもそうだったが，我々がほしいのは型の集まりではなく，型コンストラクタなのだ．ありがたいことに， Haskell の型クラスは型と一緒に使えるだけでなく，型コンストラクタと一緒に使うこともできる．
 
 ```haskell
 class Functor f where
     fmap :: (a -> b) -> f a -> f b
 ```
-このコードは，ここで指定したシグネチャの `fmap` 関数が存在するような `f` は `Functor` である，ということを規定している．小文字の `f` は型変数で， `a` や `b` と似たようなものだ．しかしながら，コンパイラは `f` が `f a` や `f b` のように他の型に作用する形でつかわれていることから， `f` は型ではなく型コンストラクタであると推測する．したがって， `Functor` のインスタンスを宣言するときには，型コンストラクタに `fmap` を与えなければならない． `Maybe` の場合にはこうなる．
+このコードは，「ここで指定したシグネチャの `fmap` 関数が存在するような `f` は `Functor` である」と言っている．小文字の `f` は型変数で， `a` や `b` と似たようなものだ．しかしながら，コンパイラは `f` が `f a` や `f b` のように他の型に作用する形でつかわれていることから， `f` は型ではなく型コンストラクタであると推論する．したがって， `Functor` のインスタンスを宣言するときには，型コンストラクタに `fmap` を与えなければならない． `Maybe` の場合にはこうなる．
 
 ```haskell
 instance functor Maybe where
@@ -225,7 +220,7 @@ instance functor Maybe where
 
 # C++ のファンクタ
 
-同じようなアプローチを C++ にも使えるだろうか？ 型コンストラクタに相当するのは `optional` のようなテンプレートクラスになる． $テンプレートテンプレートパラメータ$ で `F` にパラメータを持たせるのだ．こういう書き方になる．
+同じようなアプローチを C++ にも使えるだろうか？ 型コンストラクタに相当するのは `optional` のようなテンプレートクラスになる． テンプレートパラメータを使って `F` にパラメータを持たせるのだ．こういう書き方になる．
 
 ```cpp
 template<template<class> F>, class A, class B>
@@ -252,9 +247,9 @@ optional<B> fmap(std::function<B(A)> f, optional<A> opt) {
 ```
 この定義は動きはするのだが，`fmap` の2番目の引数がオーバーロードを処理しているというだけだ． `fmap` のもっと汎用的な定義については完全に無視されてしまう．^[This definition works, but only because the second argument of fmap selects the overload. It totally ignores the more generic definition of fmap.]
 
-# List ファンクタ
+# List 関手
 
-プログラミングにおける関手の役割について感覚的に理解するために，もう少し例を見てみよう．型をパラメータに持つ型はすべて，関手になりうる．一般的なコンテナは，保持する要素の型をパラメータに持つので，まずはとても単純なコンテナであるリストについて見てみよう．
+プログラミングにおける関手の役割について感覚的に理解するために，もう少し例を見てみよう．型をパラメータに持つ型はすべて，関手になりうる．たとえば一般的なコンテナは，保持する要素の型をパラメータに持つので関手になりうる．まずはとても単純なコンテナであるリストについて見てみよう．
 
 ```haskell
 data List a = Nil | Cons a (List a)
@@ -266,7 +261,7 @@ data List a = Nil | Cons a (List a)
 fmap :: (a -> b) -> (List a -> List b)
 ```
 
-`List a` を引数にとる関数は，2つのリストコンストラクタに対応していなければならない． `Nil` の場合は単純で， `Nil` を返せばよい．空のリストに対してできることはほとんどない． `Cons` の場合は再起を使うことになるので，少しトリッキーになる．少し立ち戻って，我々が何をしたかったのか思い出そう．やりたかったのは， `List a` と， `a` をとって `b` を返す関数 `f`  から， `b` のリストを生成することだ．では，（空でない）リストが head^[先頭の要素] と tail^[先頭以外の要素のリスト]  を `Cons` したものとして定義されているとき，これをどうしたらよいのだろうか？ head には関数 `f` を作用させ， tail には関数 `f` を持ち上げた （`fmap` した）ものを作用させればよい．これが再帰的な定義なのは，持ち上げられた `f` を次のように定義しているからだ．
+`List a` を引数にとる関数は，2つのリストコンストラクタに対応していなければならない． `Nil` の場合は単純で， `Nil` を返せばよい．空のリストに対してできることはほとんどない． `Cons` の場合は再帰を使うことになるので，少しトリッキーになる．少し立ち戻って，我々が何をしたかったのか思い出そう．やりたかったのは， `List a` と， `a` をとって `b` を返す関数 `f`  から， `b` のリストを生成することだ．では，（空でない）リストが head^[先頭の要素] と tail^[先頭以外の要素のリスト]  を `Cons` したものとして定義されているとき，これをどうしたらよいのだろうか？ head には関数 `f` を作用させ， tail には関数 `f` を持ち上げた （`fmap` した）ものを作用させればよい．これは再帰的な定義なのは，持ち上げられた `f` は次のように定義できる．
 
 ```haskell
 fmap f (Cons x t) = Cons (f x) (fmap f t)
@@ -307,8 +302,8 @@ std::copy( std::begin(w)
 
 `std::transform` は `fmap` のよりプリミティブな親戚といえる． `std::transform` 用のイテレータを実装すれば，C++ コンテナの多くは関手になる．イテレータや一次変数の記述が煩雑なので，残念ながら関手のシンプルさは失われている．（前述の `fmap` の実装と見比べてほしい．）新しく提案されている C++ の ranges ライブラリでは，ranges の関手的な性質をより明らかなものにしているのは嬉しいことだ．
 
-# Reader ファンクタ
-ここまで読み進んできた読者は，関手はコンテナの一種だといったような感覚を持ったかもしれない．これから，一見するとまったく異なる例を見てみよう．型 `a` から，返り値が型 `a` の関数へのマッピングを考えてみる．我々はこれまで，関数の型についてそれほど掘り下げてきておらず，ちゃんとした圏論的な扱いを始めるのはこれからだ．だが，プログラマである我々は既にいくらかのことを知っている． Haskell では，関数の型は arrow 型コンストラクタ `(->)` を使って組み立てる． arrow 型コンストラクタには，引数タイプと返り値タイプの2つがある．今まで見てきたのは， `a -> b` という中置記法の形だが，`->` を括弧でくくって前置記法で書いても全く等価だ．
+# Reader 関手
+ここまで読み進んできた読者は，関手はコンテナの一種だといったような印象を持ったかもしれない．これから，一見するとまったく異なる例を見てみよう．型 `a` から，返り値が型 `a` の関数へのマッピングを考えてみる．我々はこれまで，関数の型についてそれほど掘り下げてきておらず，圏論的にちゃんと扱い始めるのはこれからだ．だが，プログラマである我々は既にいくらかのことを知っている． Haskell では，関数の型を組み立てるのに arrow 型コンストラクタ `(->)` を使う． arrow には，引数タイプと返り値タイプの2つがある．今まで見てきたのは `a -> b` という中置記法の形だが，`->` を括弧でくくって前置記法で書いても全く等価だ．
 
 ```haskell
 (->) a b
@@ -326,7 +321,7 @@ std::copy( std::begin(w)
 fmap :: (a -> b) -> (r -> a) -> (r -> b)
 ```
 
-関数 `f :: a -> b` と関数 `g :: r -> a` が与えられたとき，関数 `r -> b` を作れるだろうか．2つの関数を合成する方法は一つしかないが，それは我々がまさに欲しいも野になっている．つまり `fmap` の実装は次のように書ける．
+関数 `f :: a -> b` と関数 `g :: r -> a` が与えられたとき，関数 `r -> b` を作れるだろうか．2つの関数を合成する方法は一つしかないが，それは我々がまさに欲しいものになっている．つまり `fmap` の実装は次のように書ける．
 
 ```haskell
 instance Functor ((->) r) where
