fix: arrow functor translation

--- a/books/850b20937af93b/7-1.md
+++ b/books/850b20937af93b/7-1.md
@@ -303,13 +303,13 @@ std::copy( std::begin(w)
 `std::transform` は `fmap` のよりプリミティブな親戚といえる． `std::transform` 用のイテレータを実装すれば，C++ コンテナの多くは関手になる．イテレータや一次変数の記述が煩雑なので，残念ながら関手のシンプルさは失われている．（前述の `fmap` の実装と見比べてほしい．）新しく提案されている C++ の ranges ライブラリでは，ranges の関手的な性質をより明らかなものにしているのは嬉しいことだ．
 
 # Reader 関手
-ここまで読み進んできた読者は，関手はコンテナの一種だといったような印象を持ったかもしれない．これから，一見するとまったく異なる例を見てみよう．型 `a` から，返り値が型 `a` の関数へのマッピングを考えてみる．我々はこれまで，関数の型についてそれほど掘り下げてきておらず，圏論的にちゃんと扱い始めるのはこれからだ．だが，プログラマである我々は既にいくらかのことを知っている． Haskell では，関数の型を組み立てるのに arrow 型コンストラクタ `(->)` を使う． arrow には，引数タイプと返り値タイプの2つがある．今まで見てきたのは `a -> b` という中置記法の形だが，`->` を括弧でくくって前置記法で書いても全く等価だ．
+ここまで読み進んできた読者は，関手はコンテナの一種だといったような印象を持ったかもしれない．これから，一見するとまったく異なる例を見てみよう．型 `a` から，返り値が型 `a` の関数へのマッピングを考えてみる．我々はこれまで，関数の型についてそれほど掘り下げてきておらず，圏論的にちゃんと扱い始めるのはこれからだ．だが，プログラマである我々は既にいくらかのことを知っている． Haskell では，関数の型を組み立てるのにアロー型コンストラクタ `(->)` を使う．アロー型コンストラクタには，引数タイプと返り値タイプの2つがある．今まで見てきたのは `a -> b` という中置記法の形だが，`->` を括弧でくくって前置記法で書いても全く等価だ．
 
 ```haskell
 (->) a b
 ```
 
-2つ以上の引数をとる関数は部分適用ができたように，arrow に引数の型を1つだけ部分適用できて，その場合 arrow は2つ目の引数が来ることを期待するので，
+2つ以上の引数をとる関数は部分適用ができたように，アロー型コンストラクタに引数の型を1つだけ部分適用できて，その場合 `(->)` は2つ目の引数が来ることを期待するので，
 
 ```haskell
 (->) a
