--- a/books/850b20937af93b/7-3.md
+++ b/books/850b20937af93b/7-3.md
@@ -2,7 +2,7 @@
 title: "7.3 関手の合成"
 ---
 
-集合と集合の間の関数に合成があるように，圏と圏の間の関手にも合成があるというのは納得いただけることだろう．関手の合成とは，対象については対象間のマッピングの合成であり，射についても同様である．さらに，恒等関手間の合成が恒等関手で，射と射の合成は射の合成になる．^[morphism の訳が自然変換のほうがよい？] 特別なことは何もない．自己関手の合成は特に簡単だ． `maybeTail` を覚えているだろうか？ リスト版の `maybeTail` を Haskell のビルトインの実装を使って書いてみる．
+集合と集合の間の関数に合成があるように，圏と圏の間の関手にも合成がありそうだというのは想像に難くない．関手の合成とは，対象については対象間のマッピングの合成であり，射についても同様である．さらに，恒等関手同士の合成が恒等関手で，射と射の合成が射の合成になる．特別なことは何もない．自己関手の合成は特に簡単だ． `maybeTail` を覚えているだろうか？ リスト版の `maybeTail` を Haskell のビルトインの実装を使って書いてみる．
 
 ```haskell
 maybeTail :: [a] -> Maybe [a]
@@ -50,4 +50,4 @@ square :: Int -> Int
 Maybe [Int] -> Maybe [Int]
 ```
 
-最終的に，この関数が `mis` に作用する．したがって二つの関手の合成は関手であって，その `fmap` は元の二つの関手の `fmap` の合成になる．話を戻して，圏論の言葉に言い換えると，関手の合成は結合的であるということだ．（つまり対象のマッピングと，射のマッピングの両方が結合的である．）さらに，基本的な関手である恒等関手はすべての圏に存在する．恒等関手とはすべての対象をそれ自身にマッピングし，すべての射もそれ自身にマッピングされるというものだ．そう考えると，関手は射としての性質を持っている．だとすると，関手を射とする圏とはどんなものなのだろう？ それは，対象が圏で射が関手という圏で，いわば圏の圏だ．しかしすべての圏の圏には自分自身も含まれるはずで，すべての集合の集合が作れないのと同じような矛盾を生んでしまう．そこで少し限定して，すべての **小さい圏** (small categoris) の圏 $\mathbf{Cat}$ を考えてみよう．（$\mathbf{Cat}$ 自体は大きい圏で，自身の要素にはなれないとする．）ここで小さい圏とは，対象が集合であるものをさし，集合より大きくなるもの^[訳注 宇宙 (universe) など] は含まないとする. 覚えておいて欲しいのは，圏論では無限非可算集合であっても「小さい」ことになる．あえてこう言ったのは，抽象化のいろいろな階層で自分自身を繰り返すような構造が出てくることに，筆者自身がとても驚きを感じたからだ．関手が圏をなす例についてはこの後で見ていこう．
+最終的に，この関数が `mis` に作用する．したがって二つの関手の合成は関手であって，その `fmap` は元の二つの関手の `fmap` の合成になる．話を戻して，圏論の言葉に言い換えると，関手の合成は結合的であるということだ．（つまり対象のマッピングと，射のマッピングの両方が結合的である．）さらに，基本的な関手である恒等関手はすべての圏に存在する．恒等関手とはすべての対象をそれ自身にマッピングし，すべての射もそれ自身にマッピングされるというものだ．そう考えると，関手は射としての性質を持っている．だとすると，関手を射とする圏とはどんなものなのだろう？ それは，対象が圏で射が関手という圏で，いわば圏の圏だ．しかしすべての圏の圏には自分自身も含まれるはずで，すべての集合の集合が作れないのと同じような矛盾を生んでしまう．そこで少し限定して，すべての **小さい圏** (small categoris) の圏 $\mathbf{Cat}$ を考えてみよう．（$\mathbf{Cat}$ 自体は大きい圏で，自身の要素にはなれないとする．）小さい圏とは，対象が集合であるものをさし，集合より大きいものは含まないとする. 覚えておいて欲しいのは，圏論では無限非可算集合も「小さい」ということだ．あえてこう言ったのは，抽象化のいろいろな階層で自分自身を繰り返すような構造が出てくることに，筆者自身がとても驚いたからだ．関手が圏をなす例についてはこの後で見ていこう．
