add: translator name

--- a/books/850b20937af93b/7-2.md
+++ b/books/850b20937af93b/7-2.md
@@ -49,3 +49,4 @@ Const<C, B> fmap(std::function<B(A)> f, Const<C, A> c) {
 
 `Const` 関手は奇妙なものに見えるかもしれないが， 多くのコンストラクタで重要な役割を果たす．圏論でいうと， `Const` 関手は前に述べた自己関手におけるブラックホール，つまり定関手 $\mathbf{\Delta_c}$ の特殊な場合に相当する．もう少し詳しく見ていこう．
 
+（和訳：[@takase](https://zenn.dev/takase)）
