--- a/books/850b20937af93b/7-4.md
+++ b/books/850b20937af93b/7-4.md
@@ -13,3 +13,5 @@ fmap _ _ = Nothing
 3. reader 関手を，あなたが2番目に好きな言語で実装せよ．（1番は当然 Haskell でしょう？）
 
 4. リスト関手の関手性を確認せよ．リストの tail 部分は関手性を持つことを前提としてよい．（つまり帰納法をつかうということだ．）
+
+（和訳：[@takase](https://zenn.dev/takase)）
