--- a/books/850b20937af93b/14-0.md
+++ b/books/850b20937af93b/14-0.md
@@ -4,50 +4,15 @@ title: "14.0 表現可能関手"
 
 原文：[4. Representable Functors ](https://bartoszmilewski.com/2015/07/29/representable-functors/)
 
-\lettrine[lhang=0.17]{I}{t's about time} we had a little talk about sets.
-Mathematicians have a love/hate relationship with set theory. It's the
-assembly language of mathematics --- at least it used to be. Category
-theory tries to step away from set theory, to some extent. For instance,
-it's a known fact that the set of all sets doesn't exist, but the category
-of all sets, $\Set$, does. So that's good. On the other hand, we assume that
-morphisms between any two objects in a category form a set. We even
-called it a hom-set. To be fair, there is a branch of category theory
-where morphisms don't form sets. Instead they are objects in another
-category. Those categories that use hom-objects rather than hom-sets,
-are called \newterm{enriched} categories. In what follows, though, we'll
-stick to categories with good old-fashioned hom-sets.
 
-A set is the closest thing to a featureless blob you can get outside of
-categorical objects. A set has elements, but you can't say much about
-these elements. If you have a finite set, you can count the elements.
-You can kind of count the elements of an infinite set using cardinal
-numbers. The set of natural numbers, for instance, is smaller than the
-set of real numbers, even though both are infinite. But, maybe
-surprisingly, a set of rational numbers is the same size as the set of
-natural numbers.
+そろそろ集合について少し話してもいいころだ。数学者は集合論に愛憎絡まった感情を抱いている。集合は数学者にとってのアセンブリ言語だ---少なくともそうだった。圏論は集合論から距離をある程度置こうとする。例えば、全ての集合からなる集合は存在しないというのは既知の事実だが、全ての集合からなる圏$\mathrm{Set}$は存在する。いいね。他方、我々はある圏での2つの対象の間の射は集合をなすということを仮定している。それをHom集合とよんでいた。公正を期すために述べると、射たちが集合をなさないような圏論の一分野もある。そういうときは、射たちは集合のかわりにある別の圏をなす。そのようなHom集合のかわりにHom対象を使う圏を **豊穣圏** とよぶ。しかしこの先、我々は古き良きHom集合を持つ圏だけを考えることにする。
 
-Other than that, all the information about sets can be encoded in
-functions between them --- especially the invertible ones called
-isomorphisms. For all intents and purposes isomorphic sets are
-identical. Before I summon the wrath of foundational mathematicians, let
-me explain that the distinction between equality and isomorphism is of
-fundamental importance. In fact it is one of the main concerns of the
-latest branch of mathematics, the Homotopy Type Theory (HoTT). I'm
-mentioning HoTT because it's a pure mathematical theory that takes
-inspiration from computation, and one of its main proponents, Vladimir
-Voevodsky, had a major epiphany while studying the Coq theorem prover.
-The interaction between mathematics and programming goes both ways.
+集合というのは、圏論での対象を除けば最も無特徴なモノだ。集合は元を持つが、その要素たちについて大したことは分からない。もし有限集合を相手にしているなら、その元たちを数えることができる。順序数を使えば、無限集合についてもある意味で数えることができる。例えば、どちらも無限なのにも関わらず、自然数の集合は実数の集合よりも小さい。しかし、多分驚くだろうが、有理数の集合は自然数の集合と同じ大きさなのである。
 
-The important lesson about sets is that it's okay to compare sets of
-unlike elements. For instance, we can say that a given set of natural
-transformations is isomorphic to some set of morphisms, because a set is
-just a set. Isomorphism in this case just means that for every natural
-transformation from one set there is a unique morphism from the other
-set and vice versa. They can be paired against each other. You can't
-compare apples with oranges, if they are objects from different
-categories, but you can compare sets of apples against sets of oranges.
-Often transforming a categorical problem into a set-theoretical problem
-gives us the necessary insight or even lets us prove valuable theorems.
+その他には、集合に関する全ての情報は集合たちの間の関数にエンコードすることができる---特に可逆な関数は同型とよばれる。あらゆる意味で、同型な集合たちは同一視できる。基礎論の数学者をお怒りを買う前に、同一であることと同型であることの違いは根本的に重要であることを説明させてほしい。実際、数学の最新の分野のHomotopy Type Theory (HoTT)では、これは重要な問題なのである。私がHoTTに言及しているのは、HoTTが計算からインスピレーションを得て作られた純粋数学だからであり、HoTTの主な提唱者であるVladimir Voevodskyは、定理証明器Coqの研究をしているときにHoTTの大きなひらめきを得たのだった。数学とプログラミングの相互作用はこのように両方向で起こるのである。
+
+集合に関する重要な知恵は、異なる種類の集合を比較しても良いということである。例えば、与えられた自然変換の集合が何らかの射の集合と同型であると言ってもよい。なぜなら、集合は集合だからである。この場合の同型とは単に、片方の集合の全ての自然変換についてもう片方の集合の唯一の射があり、逆もまたそうであるという意味である。これらは互いにペアにすることができる。リンゴとミカンを比べることは、もしもそれらが異なる圏から来ているのならできないが、リンゴの集合とミカンの集合とを比べることはできる。しばしば、圏論の問題を集合論的な問題に変形することによって必要な直観が得られたり、価値ある定理を証明できたりすることさえある。
+
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
