--- a/books/850b20937af93b/14-3.md
+++ b/books/850b20937af93b/14-3.md
@@ -9,10 +9,10 @@ title: "14.3 演習問題/参考文献"
 3. `Reader`関手は表現可能か？
 4. `Stream`表現を使って、引数を二乗する関数をメモ化せよ。
 5. `Stream`の`tabulate`と`index`は実際の互いに逆であることを示せ。(ヒント: 帰納法を使おう。)
-6. 関手`Pair a = Pair a a`は表現可能である。これが表わす型は何か推測できるだろうか？`tabulate`と`index`を実装せよ。
+6. 関手`Pair a = Pair a a`は表現可能である。これを表現する型は何か推測できるだろうか？`tabulate`と`index`を実装せよ。
 
 
-# 参考文献/参考文献
+# 参考文献
 
 1. The Catstersの表現可能関手についてのビデオ https://www.youtube.com/watch?v=4QgjKUzyrhM
 
