--- a/books/850b20937af93b/14-2.md
+++ b/books/850b20937af93b/14-2.md
@@ -23,7 +23,7 @@ $$
 である。この変換の自然性条件は、$x$から$y$への任意の射$f$について、次の図式
 
 $$
-F f \circ \alpha_x = \alpha_y \circ \cat{C}(a, f)
+F f \circ \alpha_x = \alpha_y \circ \mathbf{C}(a, f)
 $$
 
 が可換であると教えてくれる。Haskellでは、自然変換はオプションで`forall`量化子をつけた多相関数で置き換えられる:
