--- a/books/850b20937af93b/14-3.md
+++ b/books/850b20937af93b/14-3.md
@@ -8,7 +8,7 @@ title: "14.3 演習問題/参考文献"
 2. `Maybe`は表現可能ではないことを示せ。
 3. `Reader`関手は表現可能か？
 4. `Stream`表現を使って、引数を二乗する関数をメモ化せよ。
-5. `Stream`の`tabulate`と`index`は実際の互いに逆であることを示せ。(ヒント: 帰納法を使おう。)
+5. `Stream`の`tabulate`と`index`は実際に互いに逆であることを示せ。(ヒント: 帰納法を使おう。)
 6. 関手`Pair a = Pair a a`は表現可能である。これを表現する型は何か推測できるだろうか？`tabulate`と`index`を実装せよ。
 
 
