--- a/books/850b20937af93b/14-2.md
+++ b/books/850b20937af93b/14-2.md
@@ -117,12 +117,13 @@ instance Representable Stream where
 
 面白そうなので、両側で対数を取ってみよう: $a = \mathrm{log}F$
 
-もちろん、これは全く形式的な変形だけれど、対数の性質をいくらか知っていればこれは極めて役に立つ。特に、直積型をもとにした関手は直和型で表現できることや、直和型の関手は一般には表現可能ではない(例: リスト関手)ことがわかる。
+もちろん、これは全く形式的な変形だけれど、対数の性質をいくらか知っていればこれは極めて役に立つ。特に、直積型をもとにした関手は直和型で表現できることや、直和型の関手は一般には表現可能ではない(例: リスト関手)ことがわかる[^2]。
 
 最後に、表現可能関手は同じ事柄の2つの異なる実装を与えることに注意しよう---1つは関数、1つはデータ構造である。それらはかんぜん に同じ内容を持っている---同じ値が同じキーを使うと回収できる。これが私が話していた「同じさ」の感覚である。2つの自然同型な関手は、その内容に関わる限り同一視できる。他方、2つの表現はしばしば異なる風に実装され、異なる性能特性を持っているかもしれない。メモ化は性能向上に使われ、実行時間を劇的に削減するのにつながるかもしれない。根底が同じ計算の異なる表現を生成できるというのは実践上とても価値のあることである。なので驚くことに、圏論は性能のことは全く考えていないけれども、実践上の価値を持つ異なる実装を探索する機会をたっぷりもたらしてくれるのだ。
 
 
 [^1]: 訳注: なので、モノイド全体を対象とし、その間の(集合の意味での)関数たちを射とする圏をモノイドの圏と思うことも一応できたがそうしなかった、という意味だと思われる。
+[^2]: 訳注: 「直和をもとにした関手」ってなんだという感じがしますが、演習問題の6を解くとなんとなく分かる気がします。
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
