--- a/books/850b20937af93b/14-2.md
+++ b/books/850b20937af93b/14-2.md
@@ -8,7 +8,7 @@ title: "14.2 表現可能関手"
 
 以前、同型な集合たちは同一であるとしばしば考えるということを言った。もっと一般的に、ある圏で同型な *対象* たちは同一であると考える。なぜなら、対象は射を通した他の対象への(あるいは自身への)関係以外に構造を何も持たないからである。
 
-例えば、以前モノイドの圏$\mathrm{Mon}$の話をした。モノイドの圏は元々は集合でモデル化されていたのだった[^1]。しかし、射としてそれら集合の間のモノイド構造を保つような関数だけを丁寧に選んだのだった。なので、$\mathrm{Mon}$の2つの対象が同型であれば、つまりそれらの間に可逆射が存在すれば、それらは完全に同じ構造なのである。対象や射の元となった集合や関数の中身を覗き見たなら、あるモノイドの単位元がもう1つのモノイドの単位元に写り、2つの元の積がそれら2つを写したものの積に写っているさまが見られるだろう。
+例えば、以前モノイドの圏$\mathrm{Mon}$の話をした。モノイドの圏は元々は集合でモデル化されていたのだった[^1]。しかし、射としてそれら集合の間のモノイド構造を保つような関数だけを丁寧に選んだのだった。なので、$\mathrm{Mon}$の2つの対象が同型であれば、つまりそれらの間に可逆射が存在すれば、それらは完全に同じ構造なのである。対象や射のもととなった集合や関数の中身を覗き見たなら、あるモノイドの単位元がもう1つのモノイドの単位元に写り、2つの元の積がそれら2つを写したものの積に写っているさまが見られるだろう。
 
 同じ推論が関手にも適用できる。2つの圏の間の関手たちは、自然変換が射の役割を果たすような圏をなす。なので、それらの間に可逆な自然変換が存在するならそれら2つの関手は同型であり、さらに同一のものであると思うことができる。
 
@@ -73,7 +73,7 @@ alpha h = map h [12]
 map f (map h [12]) = map (f . h) [12]
 ```
 
-しかし、逆変換を見つけようとすると、任意の型`x`のリストから`x`を返す関数に行かなければいけない。
+しかし、逆変換を見つけようとすると、それは任意の型`x`のリストから`x`を返す関数に行くものであるはずである。
 
 ```
 beta :: forall x. [x] -> (Int -> x)
@@ -81,7 +81,7 @@ beta :: forall x. [x] -> (Int -> x)
 
 例えば`head`なんかを使ってリストから`x`を回収することが思い付くかもしれないが、これは空リストの場合にうまく行かない。型`a`(`Int`の代わりだった)については、うまく行くような選択肢はないことに注意しよう。したがって、リスト関手は表現可能ではない。
 
-Haskellの(自己)関手はコンテナにちょっと似ているという話をしたのを覚えているだろうか？同じように、表現可能関手は関数呼び出しをメモ化した結果を蓄えるためのコンテナであると思うことができる(HaskellでのHom集合の元はただの関数である)。表現する対象、すなわち$\mathbf{C}(a, -)$での型`a`は、表でキーになる型と思うことができ、これを使って関数の値が集計された表にアクセスできる。先程まで`\alpha`とよんでいた変換は`tabulate`(`表にする`)とよばれ、その逆`\beta`は`index`とよばれる。これが(少し簡略化された)`Representable`クラスの定義である:
+Haskellの(自己)関手はコンテナにちょっと似ているという話をしたのを覚えているだろうか？同じように、表現可能関手は関数呼び出しをメモ化した結果を蓄えるためのコンテナであると思うことができる(HaskellでのHom集合の元はただの関数である)。表現する対象、すなわち$\mathbf{C}(a, -)$での型`a`は、表でキーになる型と思うことができ、これを使って関数の値が集計された表にアクセスできる。先程まで$\alpha$とよんでいた変換は`tabulate`(`表にする`)とよばれ、その逆$\beta$は`index`とよばれる。これが(少し簡略化された)`Representable`クラスの定義である:
 
 ```haskell
 class Representable f where
@@ -109,7 +109,7 @@ instance Representable Stream where
     index (Cons b bs) n = if n == 0 then b else index bs (n - 1)
 ```
 
-任意の返り値の関数の族全体をカバーするようなメモ化のための単一の枠組みを実装できるというのはとても面白いことだ。
+任意の返り値の関数の族全体をカバーするようなメモ化のための枠組みを単一のものとして実装できるというのはとても面白いことだ。
 
 反変関手の表現可能性は、$\mathbf{C}(-, a)$の2番目の引数を固定しておくことを除けば同様に定義できる。または等価なことだが、$\mathbf{C}^{op}$から$\mathrm{Set}$への関手を考えてもよい。なぜなら、$\mathbf{C}^{op}(a, -)$は$\mathbf{C}(-, a)$と同じだからである。
 
@@ -119,7 +119,7 @@ instance Representable Stream where
 
 もちろん、これは全く形式的な変形だけれど、対数の性質をいくらか知っていればこれは極めて役に立つ。特に、直積型をもとにした関手は直和型で表現できることや、直和型の関手は一般には表現可能ではない(例: リスト関手)ことがわかる[^2]。
 
-最後に、表現可能関手は同じ事柄の2つの異なる実装を与えることに注意しよう---1つは関数、1つはデータ構造である。それらはかんぜん に同じ内容を持っている---同じ値が同じキーを使うと回収できる。これが私が話していた「同じさ」の感覚である。2つの自然同型な関手は、その内容に関わる限り同一視できる。他方、2つの表現はしばしば異なる風に実装され、異なる性能特性を持っているかもしれない。メモ化は性能向上に使われ、実行時間を劇的に削減するのにつながるかもしれない。根底が同じ計算の異なる表現を生成できるというのは実践上とても価値のあることである。なので驚くことに、圏論は性能のことは全く考えていないけれども、実践上の価値を持つ異なる実装を探索する機会をたっぷりもたらしてくれるのだ。
+最後に、表現可能関手は同じ事柄の2つの異なる実装を与えることに注意しよう---1つは関数、1つはデータ構造である。それらは完全に同じ内容を持っている---同じ値が同じキーを使うと回収できる。これが私が話していた「同じさ」の感覚である。2つの自然同型な関手は、その内容に関わる限り同一視できる。他方、2つの表現はしばしば異なる風に実装され、異なる性能特性を持っているかもしれない。メモ化は性能向上に使われ、実行時間を劇的に削減するのにつながるかもしれない。根底が同じ計算の異なる表現を生成できるというのは実践上とても価値のあることである。なので驚くことに、圏論は性能のことは全く考えていないけれども、実践上の価値を持つ異なる実装を探索する機会をたっぷりもたらしてくれるのだ。
 
 
 [^1]: 訳注: なので、モノイド全体を対象とし、その間の(集合の意味での)関数たちを射とする圏をモノイドの圏と思うことも一応できたがそうしなかった、という意味だと思われる。
