--- a/books/850b20937af93b/13-3.md
+++ b/books/850b20937af93b/13-3.md
@@ -2,14 +2,14 @@
 title: "13.3 演習問題"
 ---
 
-1. モノイドの準同型は単位元を保たなければいけない、という要請は無駄に思えるかもしれない(私は最初そう思った)。なにしろ、任意の$a$について$h a * h e = h (a * e) = h a$がなりたつ。したがって、$h~e$は右単位元のように(そして類推から左単位元のようにも)振る舞う。問題は$a$が全体を動くとき、$h a$が対象のモノイドの部分モノイドしか覆わないかもしれないことである。$h$の外に「本物の」単位元があるかもしれないのである。モノイド間の、積をたもつような全単射[^1]は自動的に単位元も保つことを示せ。[^2] [^3]
+1. モノイドの準同型は単位元を保たなければいけない，という要請は無駄に思えるかもしれない(私は最初そう思った)．なにしろ，任意の$a$について$h a * h e = h (a * e) = h a$がなりたつ．したがって，$h~e$は右単位元のように(そして類推から左単位元のようにも)振る舞う．問題は$a$が全体を動くとき，$h a$が対象のモノイドの部分モノイドしか覆わないかもしれないことである．$h$の外に「本物の」単位元があるかもしれないのである．モノイド間の，積をたもつような全単射[^1]は自動的に単位元も保つことを示せ．[^2] [^3]
 
-2. 連結を備えた整数リストから積を備えた整数へのモノイド準同型を考えよう。空リスト`[]`の像はなんだろうか？1つしか要素のないリストはそれが含む整数に写されると仮定しよう。つまり、`[3]`は3に写される、などなど。`[1,2,3,4]`の像はなんだろうか？いくつの相異なるリストが整数12に写されるだろうか？これら2つのモノイドの間に他にも準同型があるだろうか？
+2. 連結を備えた整数リストから積を備えた整数へのモノイド準同型を考えよう．空リスト`[]`の像はなんだろうか？1つしか要素のないリストはそれが含む整数に写されると仮定しよう．つまり，`[3]`は3に写される，などなど．`[1,2,3,4]`の像はなんだろうか？いくつの相異なるリストが整数12に写されるだろうか？これら2つのモノイドの間に他にも準同型があるだろうか？
 
 3. 1元集合によって生成される自由モノイドはなんだろうか？それが何と同型か分かるだろうか？
 
-[^1]: 訳注: isomorphismだったのですが、射と訳してしまうと単位元の保存も要請されてしまうので、単に集合の全単射のことだよねとおもってこう訳していあす。
+[^1]: 訳注: isomorphismだったのですが，射と訳してしまうと単位元の保存も要請されてしまうので，単に集合の全単射のことだよねとおもってこう訳していあす．
 [^2]: 訳注: 本当かなと思ってやってみましたがちゃんと示せました: https://twitter.com/ashiato45/status/1396093603072540676
-[^3]: 訳注:「無駄に思えるかもしれない」と言っているので大丈夫だと思いますが、結局「単位元を保たなければいけない」という条件は無駄ではなくて、全単射でなければこの演習問題のようなことは成り立ちません。例えば、自然数に加算を入れたモノイドをA、自然数のペアに$(a, b)\cdot (c, d) = (a+b, c\cdot d)$という演算を入れたモノイドをBとして($A$の単位元は0で、$B$の単位元は$(0, 1)$です)、モノイド準同型$f\colon A\to B$を$f(a)=(a, 0)$で定めると、$f(0)=(0, 0)$は$f(A)$の単位元ですが$B$の単位元ではありません。
+[^3]: 訳注:「無駄に思えるかもしれない」と言っているので大丈夫だと思いますが，結局「単位元を保たなければいけない」という条件は無駄ではなくて，全単射でなければこの演習問題のようなことは成り立ちません．例えば，自然数に加算を入れたモノイドをA，自然数のペアに$(a, b)\cdot (c, d) = (a+b, c\cdot d)$という演算を入れたモノイドをBとして($A$の単位元は0で，$B$の単位元は$(0, 1)$です)，モノイド準同型$f\colon A\to B$を$f(a)=(a, 0)$で定めると，$f(0)=(0, 0)$は$f(A)$の単位元ですが$B$の単位元ではありません．
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
