--- a/books/850b20937af93b/3-6.md
+++ b/books/850b20937af93b/3-6.md
@@ -3,20 +3,20 @@ title: "3.6 演習問題"
 ---
 
 
-1. 自由圏を以下から生成せよ。
-(a) 一つのノードを持ちエッジを持たないグラフ。
-(b) 一つのノードを持ち、一つの向きつきのエッジを持つグラフ。（ヒント ：この辺は自分自身と合成できる）
-(c) 二つのノードを持ち、それらの間の一つの矢印を持つグラフ。
-(d) 一つのノードを持ち、アルファベット$a, b, c,\ldots, z$でラベルづけられrた26個の射を持つ。
+1. 自由圏を以下から生成せよ．
+(a) 一つのノードを持ちエッジを持たないグラフ．
+(b) 一つのノードを持ち，一つの向きつきのエッジを持つグラフ．（ヒント ：この辺は自分自身と合成できる）
+(c) 二つのノードを持ち，それらの間の一つの矢印を持つグラフ．
+(d) 一つのノードを持ち，アルファベット$a, b, c,\ldots, z$でラベルづけられrた26個の射を持つ．
 
 2. 以下はどのような順序か
-(a) 包含関係を持つ集合の集合。AがBに含まれるとは、任意のAの要素がまたBの要素であること。
-(b) C++の型に対する以下のサブタイプ関係。`T1`が`T2`のサブタイプであるとは、コンパイルエラーを起こすことなく`T1`のポインタを`T2`のポインタのための関数に渡すことができることをいう。
+(a) 包含関係を持つ集合の集合．AがBに含まれるとは，任意のAの要素がまたBの要素であること．
+(b) C++の型に対する以下のサブタイプ関係．`T1`が`T2`のサブタイプであるとは，コンパイルエラーを起こすことなく`T1`のポインタを`T2`のポインタのための関数に渡すことができることをいう．
 
-3. `Bool`を二つの値`True`と`False`を持つ集合と考えたとき、`&&` (AND)と`||` (OR)の二つの演算についてそれぞれが集合としてのモノイドをなすことを示せ。
+3. `Bool`を二つの値`True`と`False`を持つ集合と考えたとき，`&&` (AND)と`||` (OR)の二つの演算についてそれぞれが集合としてのモノイドをなすことを示せ．
 
-4. AND演算子による`Bool`モノイドを圏として表現せよ。射とその合成規則を列挙せよ。
+4. AND演算子による`Bool`モノイドを圏として表現せよ．射とその合成規則を列挙せよ．
 
-5. 3を法とした加法をモノイド圏として表現せよ。
+5. 3を法とした加法をモノイド圏として表現せよ．
 
 （和訳：[@unaoya](https://zenn.dev/unaoya)）
