--- a/books/850b20937af93b/15-0.md
+++ b/books/850b20937af93b/15-0.md
@@ -4,219 +4,134 @@ title: "15.0 米田の補題"
 
 原文：[5. The Yoneda Lemma ](https://bartoszmilewski.com/2015/09/01/the-yoneda-lemma/)
 
+圏論でのほとんどの構成は他の数学の特定分野の結果の一般化である。積、余積、モノイド、羃などのは圏論のずっと前から知られていた。これらは様々な数学の分野で異なる名前で知られていたかもしれない。集合論での直積(Cartesian product)[^1]、順序論での交わり(meet)、論理学での連言(conjunction) --- これらはすべて圏論的な積の抽象的な概念の具体例になっている。
+
+米田の補題はこの点では、他の数学の分野ではほとんど、あるいは全く先例のない、圏たち一般全体に関する主張として際立っている。米田の補題の一番近い喩えは、群論でのケーリー(Cayley)の定理であるという人もいる(任意の群はある集合の置換群に同型である[^2])。
+
+米田の補題の設定は任意の圏$\mathbf{C}$と、$\mathbf{C}$から$\mathrm{Set}$への関手$F$についてのものである。前の章では、いくらかの$\mathrm{Set}$値関手は表現可能、つまりあるHom関手に同型であるということを見た。米田の補題は、任意の$\mathrm{Set}$値関手は自然変換を通じてHom関手から得られるということを教えてくれて、しかもそのような変換を明示的に列挙してくれる。
+
+私が自然変換について話したとき、自然性条件は極めて制限の強いものになりうるということを述べた。ある対象について自然変換の成分を定義するとき、自然性はこの成分を、射でつながっているもう1つの対象に「送る」のに十分強い性質かもしれない。定義域と値域となる圏たちに対象間の矢があればあるほど、自然変換の成分を送るための制約は強くなる。図らずも$\mathrm{Set}$はとても矢の豊富な圏なのだ。
+
+米田の補題は、Hom関手と任意の他の関手$F$との間の自然変換は、たった1点で1つの成分の値を指定することで完全に決定されてしまうということを教えてくれるのだ！自然変換の残りは、自然性条件から従うだけなのである。
+
+さて、米田の補題で扱う2つの関手の間の自然性条件について復習しよう。1つ目の関手はHom関手だ。この関手は$\mathbf{C}$の任意の対象$x$を射の集合$\mathbf{C}(a, x)$に写す。ここで$a$は$\mathbf{C}$の中で固定した対象である。さらに、この関手は$x$から$y$への任意の射$f$を$\mathbf{C}(a, f)$に写すことも見たのだった。
+
+2つ目の関手は任意の$\mathrm{Set}$値関手$F$である。
+
+これら2つの関手の間の自然変換を$\alpha$とよぼう。いま$\mathrm{Set}$の中のことを扱っているので、$\alpha_x$や$\alpha_y$といった自然変換の成分は単に集合の間の関数である:
+
+$$
+\alpha_x \mathtt{::}\   \mathbf{C}(a, x) \to F x \\
+\alpha_y \mathtt{::}\   \mathbf{C}(a, y) \to F y
+$$
+
+![](https://storage.googleapis.com/zenn-user-upload/4c7a0253f01ebb3d7cd64256.png)
+
+さらにこれはただの関数なので、特定の点でのそれらの値というのを見ることができる。でも集合$\mathbf{C}(a, x)$での点とはなんだろう？ここで鍵となる観察がある: $\mathbf{C}(a, x)$での全ての点は$a$から$x$への射$h$でもある。
+
+すると、$\alpha$の自然性の四角形は:
+
+$$
+\alpha_y \circ \mathbf{C}(a, f) = F f \circ \alpha_x
+$$
+
+となり、各点で見ると$h$に作用しているとして、
+
+$$
+\alpha_y (\mathbf{C}(a, f) h) = (F f) (\alpha_x h)
+$$
+
+となる。前の章の内容から、射$f$へのHom関手$\mathbf{C}(a, -)$の作用は前への合成で定義したのを思い出すかもしれない:
+
+$$
+\mathbf{C}(a, f) h = f \circ h
+$$
+
+これで次のようになる:
+
+$$
+\alpha_y (f \circ h) = (F f) (\alpha_x h)
+$$
+
+この条件が実際どれだけ強いかは、この式を$x=a$の場合に特殊化すれば見られる:
+
+![](https://storage.googleapis.com/zenn-user-upload/758b73bd662e0ccdff1897ea.png)
+
+この場合、$h$は$a$から$a$への射となる。我々は少なくとも1つそのような射があることを知っており、$h=\mathrm{id}_a$である。これを差し込んでみよう:
+
+$$
+\alpha_y f = (F f) (\alpha_a \mathrm{id}_a)
+$$
+
+何が起こったかに注意しよう: 左辺は$\mathbf{C}(a, y)$の任意の元$f$への$\alpha_y$の作用である。そして、これは$\mathrm{id}_a$での$\alpha_a$の値ただ1つによって完全に決定される。その値をどのように選んでも、それが1つの自然変換を生成する。$\alpha_a$の値は$集合F a$の元なので、$F a$のどの点も何か$\alpha$を定めることになる。
+
+反対に、任意に$\mathbf{C}(a, -)$から$F$への任意の自然変換$\alpha$が与えられたとき、それを$\mathrm{id}_a$で評価して$F a$の点を1つ得ることができる。
+
+これで米田の補題が示せた:
+
+> $\mathbf{C}(a, -)$から$F$への自然変換と$F a$の元との間には一対一の関係が存在する。
+
+言い換えると、
+
+$$
+\mathrm{Nat}(\mathbf{C}(a, -), F) \simeq F a
+$$
+となる。
+
+あるいは、$\mathbf{C}$と$\mathrm{Set}$との間の関手圏$[\mathbf{C}, \mathrm{Set}]$の記法を使えば、自然変換の集合はただのこの圏のHom集合であって、次のように書ける:
+
+$$
+[\mathbf{C}, \mathrm{Set}](\mathbf{C}(a, -), F) \simeq F a
+$$
+
+あとで、この対応が実は自然変換であることを説明しよう。
+
+さて、この結果についての直観を得てみたい。一番驚くべきことは、たった1つの核、すなわち$\mathrm{id}_a$に割り当てる値から結晶のよゆに自然変換全体ができあがることだ。この点から自然性条件に従って自然変換が広がるのである。$\mathbf{C}$の像が$\mathrm{Set}$にみなぎる。まず最初に$\mathbf{C}$の$\mathbf{C}(a, -)$での像がどうなるかを考えてみよう。
+
+まず$a$それ自身の像から始める。Hom関手$\mathbf{C}(a, -)$のもとで、$a$は集合$\mathbf{C}(a, a)$に写される。他方、関手$F$のもとで$a$は$F a$に写される。自然変換の成分$\alpha_a$は$\mathbf{C}(a, a)$から$F a$への何らかの関数である。集合$\mathbf{C}(a, a)$の$\mathrm{id}_a$に対応する1点だけに注目してみよう。これが集合のただの1点であることを強調するために、これを$p$とよぼう。成分$\alpha_a$は$p$を$F a$の何らかの点$q$に写すことになる。これから、どんな$q$を選んでもただ1つの自然変換ができることを示そう。
 
 
-\lettrine[lhang=0.17]{M}{ost constructions in} category theory are generalizations of results
-from other more specific areas of mathematics. Things like products,
-coproducts, monoids, exponentials, etc., have been known long before
-category theory. They might have been known under different names in
-different branches of mathematics. A Cartesian product in set theory, a
-meet in order theory, a conjunction in logic --- they are all specific
-examples of the abstract idea of a categorical product.
+![](https://storage.googleapis.com/zenn-user-upload/62f6346a7a5a8290ff44a913.png)
 
-The Yoneda lemma stands out in this respect as a sweeping statement
-about categories in general with little or no precedent in other
-branches of mathematics. Some say that its closest analog is Cayley's
-theorem in group theory (every group is isomorphic to a permutation
-group of some set).
+最初の主張は、1点$q$を選ぶと$\alpha_a$の残りの部分が唯一定まることだ。実際、$a$から$a$へのある射$g$に対応する(つまり$\mathbf{C}(a, a)$に属している)任意の他の点$p'$を選ぼう。すると、ここで米田の補題の魔法が使える: $g$は集合$\mathbf{C}(a, a)$の点$p'$と見ることができる。それと同時に、$g$は集合の間の *関数* を2つ選ぶ。実際、Hom関手によって射$g$は関数$\mathbf{C}(a, g)$に写り、$F$によって$F g$に写る。
 
-The setting for the Yoneda lemma is an arbitrary category $\cat{C}$
-together with a functor $F$ from $\cat{C}$ to $\Set$. We've
-seen in the previous section that some $\Set$-valued functors are
-representable, that is isomorphic to a hom-functor. The Yoneda lemma
-tells us that all $\Set$-valued functors can be obtained from
-hom-functors through natural transformations, and it explicitly
-enumerates all such transformations.
 
-When I talked about natural transformations, I mentioned that the
-naturality condition can be quite restrictive. When you define a
-component of a natural transformation at one object, naturality may be
-strong enough to ``transport'' this component to another object that is
-connected to it through a morphism. The more arrows between objects in
-the source and the target categories there are, the more constraints you
-have for transporting the components of natural transformations.
-$\Set$ happens to be a very arrow-rich category.
+![](https://storage.googleapis.com/zenn-user-upload/983da5afdbcf802a0aa33e54.png)
 
-The Yoneda lemma tells us that a natural transformation between a
-hom-functor and any other functor $F$ is completely determined by
-specifying the value of its single component at just one point! The rest
-of the natural transformation just follows from naturality conditions.
+さて、$\mathbf{C}(a, g)$の元々の$p$への作用を考えよう。覚えているだろうけれども、$p$は$\mathrm{id}_a$に対応する。$\mathbf{C}(a, g)$の作用は前への合成$g\circ \mathrm{id}_a$として定義され、これは$g$に等しい。そしてこれは点$p'$に対応する。したがって、射$g$は、$p$に作用すると$p'$(これはつまり$g$)になるような関数に写される。一周してもとに戻ってきた！
 
-So let's review the naturality condition between the two functors
-involved in the Yoneda lemma. The first functor is the hom-functor. It
-maps any object $x$ in $\cat{C}$ to the set of morphisms
-$\cat{C}(a, x)$ --- for $a$ a fixed object in $\cat{C}$. We've
-also seen that it maps any morphism $f$ from $x \to y$ to $\cat{C}(a, f)$.
+次に$q$への$F g$の作用を考えよう。作用した結果が$F a$のなにかの点$q'$だとする。自然性の四角形を完成させるために、$p'$は$\alpha_a$のもとで$q'$に写されなければいけない。$p'$は任意に選んでおり(これは任意の$g$)、$q'$は$\alpha_a$のもとで$p$に由来している。これで、関数$\alpha_a$は完全に決定された。
 
-The second functor is an arbitrary $\Set$-valued functor
-$F$.
+2つ目の主張は、$\mathbf{C}$の任意の対象$x$で$a$につながっているものについて、$\alpha_x$が唯一に決定されることである。この推論は、以下の点を除けば類似している: 今回は$\mathbf{C}(a, x)$と$F x$という2つの集合があり、$a$から$x$への射$g$はHom関手で
 
-Let's call the natural transformation between these two functors
-$\alpha$. Because we are operating in $\Set$, the components of
-the natural transformation, like $\alpha_x$ or $\alpha_y$, are just
-regular functions between sets:
-\begin{gather*}
-\alpha_x \Colon \cat{C}(a, x) \to F x \\
-\alpha_y \Colon \cat{C}(a, y) \to F y
-\end{gather*}
+$$
+\cat{C}(a, g) \Colon \cat{C}(a, a) \to \cat{C}(a, x)
+$$
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/yoneda1.png}
-\end{figure}
+に写され、$F$で
 
-\noindent
-And because these are just functions, we can look at their values at
-specific points. But what's a point in the set $\cat{C}(a, x)$? Here's
-the key observation: Every point in the set $\cat{C}(a, x)$ is also a
-morphism $h$ from $a$ to $x$.
+$$
+F g \Colon F a \to F x
+$$
 
-So the naturality square for $\alpha$:
-\[\alpha_y \circ \cat{C}(a, f) = F f \circ \alpha_x\]
-becomes, point-wise, when acting on $h$:
-\[\alpha_y (\cat{C}(a, f) h) = (F f) (\alpha_x h)\]
-You might recall from the previous section that the action of the
-hom-functor $\cat{C}(a,-)$ on a morphism $f$ was defined as
-precomposition:
-\[\cat{C}(a, f) h = f \circ h\]
-which leads to:
-\[\alpha_y (f \circ h) = (F f) (\alpha_x h)\]
-Just how strong this condition is can be seen by specializing it to the
-case of $x = a$.
+に写される点。再び、$p$への$\mathbf{C}(a, g)$の作用は前からの合成$g\circ \mathrm{id}_a$で定義され、これは$\mathbf{C}(a, x)$の点$p'$に対応する。自然性は、$p'$に$\alpha_x$が作用した値が
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/yoneda2.png}
-\end{figure}
+$$
+q' = (F g) q
+$$
 
-\noindent
-In that case $h$ becomes a morphism from $a$ to
-$a$. We know that there is at least one such morphism,
-$h = \id_a$. Let's plug it in:
-\[\alpha_y f = (F f) (\alpha_a \id_a)\]
-Notice what has just happened: The left hand side is the action of
-$\alpha_y$ on an arbitrary element $f$ of $\cat{C}(a, y)$. And
-it is totally determined by the single value of $\alpha_a$ at
-$\id_a$. We can pick any such value and it will generate a natural
-transformation. Since the values of $\alpha_a$ are in the set
-$F a$, any point in $F a$ will define some $\alpha$.
+となるように定める。$p'$は任意だったので、これで関数$\alpha_x$全体が決定された。
 
-Conversely, given any natural transformation $\alpha$ from
-$\cat{C}(a, -)$ to $F$, you can evaluate it at $\id_a$ to
-get a point in $F a$.
+![](https://storage.googleapis.com/zenn-user-upload/cc6392c30b06d6314182f57a.png)
 
-We have just proven the Yoneda lemma:
+$\mathbf{C}$の中に$a$と全くつながりのない対象があったらどうなるだろうか？それらは$\mathbf{C}(a, -)$によってある集合、すなわち空集合に写される。空集合は集合の圏において始対象であることを思い出そう。つまり、この空集合から他の任意の集合に唯一の関数が存在する。この関数を`absurd`とよんでいた。したがって再び、自然変換のこの成分に選択の余地はない。つまり、`abusrd`にしかなりえないのだ。
 
-\begin{quote}
-There is a one-to-one correspondence between natural transformations
-from $\cat{C}(a, -)$ to $F$ and elements of $F a$. 
-\end{quote}
-in other words,
-\[\cat{Nat}(\cat{C}(a, -), F) \cong F a\]
-Or, if we use the notation $[\cat{C}, \Set]$ for the functor
-category between $\cat{C}$ and $\Set$, the set of natural
-transformation is just a hom-set in that category, and we can write:
-\[[\cat{C}, \Set](\cat{C}(a, -), F) \cong F a\]
-I'll explain later how this correspondence is in fact a natural
-isomorphism.
+米田の補題を理解する1つの方法は、$\mathrm{Set}$値関手の間の自然変換はただの関数の族であり、そして関数というのは一般にlossy[^3]だということを意識することだ。関数は情報をつぶすかもしれず、終域の一部分しかカバーしないかもしれない。Lossyでない関数というのは可逆なものだけであり、つまり同型だ。すると、構造を保つ一番良い$\mathrm{Set}$値関手は表現可能なものだということが従う。表現可能関手はHom関手か、あるいはHom関手に自然同型なものたちだ。他の関手$F$はHom関手からlossyな変換を通して得られる。そのような変換は情報を損なわないかもしれないが、関手$F$の像は$\mathrm{Set}$の小さいごく一部しかカバーしないかもしれない。
 
-Now let's try to get some intuition about this result. The most amazing
-thing is that the whole natural transformation crystallizes from just
-one nucleation site: the value we assign to it at $\id_a$. It
-spreads from that point following the naturality condition. It floods
-the image of $\cat{C}$ in $\Set$. So let's first consider what the
-image of $\cat{C}$ is under $\cat{C}(a, -)$.
 
-Let's start with the image of $a$ itself. Under the hom-functor
-$\cat{C}(a, -)$, $a$ is mapped to the set $\cat{C}(a, a)$.
-Under the functor $F$, on the other hand, it is mapped to the set
-$F a$. The component of the natural transformation $\alpha_a$
-is some function from $\cat{C}(a, a)$ to $F a$. Let's focus on
-just one point in the set $\cat{C}(a, a)$, the point corresponding to
-the morphism $\id_a$. To emphasize the fact that it's just a point
-in a set, let's call it $p$. The component $\alpha_a$ should map
-$p$ to some point $q$ in $F a$. I'll show you that
-any choice of $q$ leads to a unique natural transformation.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.3\textwidth]{images/yoneda3.png}
-\end{figure}
-
-\noindent
-The first claim is that the choice of one point $q$ uniquely
-determines the rest of the function $\alpha_a$. Indeed, let's pick any
-other point, $p'$ in $\cat{C}(a, a)$, corresponding to
-some morphism $g$ from $a$ to $a$. And here's where
-the magic of the Yoneda lemma happens: $g$ can be viewed as a
-point $p'$ in the set $\cat{C}(a, a)$. At the same time,
-it selects two \emph{functions} between sets. Indeed, under the
-hom-functor, the morphism $g$ is mapped to a function
-$\cat{C}(a, g)$; and under $F$ it's mapped to $F g$.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/yoneda4.png}
-\end{figure}
-
-\noindent
-Now let's consider the action of $\cat{C}(a, g)$ on our original
-$p$ which, as you remember, corresponds to $\id_a$. It is
-defined as precomposition, $g \circ \id_a$, which is equal to $g$,
-which corresponds to our point $p'$. So the morphism
-$g$ is mapped to a function that, when acting on $p$
-produces $p'$, which is $g$. We have come full
-circle!
-
-Now consider the action of $F g$ on $q$. It is some
-$q'$, a point in $F a$. To complete the naturality
-square, $p'$ must be mapped to $q'$ under
-$\alpha_a$. We picked an arbitrary $p'$ (an arbitrary
-$g$) and derived its mapping under $\alpha_a$. The function
-$\alpha_a$ is thus completely determined.
-
-The second claim is that $\alpha_x$ is uniquely determined for any
-object $x$ in $\cat{C}$ that is connected to $a$. The
-reasoning is analogous, except that now we have two more sets,
-$\cat{C}(a, x)$ and $F x$, and the morphism $g$ from
-$a$ to $x$ is mapped, under the hom-functor, to:
-\[\cat{C}(a, g) \Colon \cat{C}(a, a) \to \cat{C}(a, x)\]
-and under $F$ to:
-\[F g \Colon F a \to F x\]
-Again, $\cat{C}(a, g)$ acting on our $p$ is given by the
-precomposition: $g \circ \id_a$, which corresponds to a point
-$p'$ in $\cat{C}(a, x)$. Naturality determines the value
-of $\alpha_x$ acting on $p'$ to be:
-\[q' = (F g) q\]
-Since $p'$ was arbitrary, the whole function $\alpha_x$ is
-thus determined.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/yoneda5.png}
-\end{figure}
-
-\noindent
-What if there are objects in $\cat{C}$ that have no connection to
-$a$? They are all mapped under $\cat{C}(a, -)$ to a single set
---- the empty set. Recall that the empty set is the initial object in
-the category of sets. It means that there is a unique function from this
-set to any other set. We called this function \code{absurd}. So here,
-again, we have no choice for the component of the natural
-transformation: it can only be \code{absurd}.
-
-One way of understanding the Yoneda lemma is to realize that natural
-transformations between $\Set$-valued functors are just families
-of functions, and functions are in general lossy. A function may
-collapse information and it may cover only parts of its codomain. The
-only functions that are not lossy are the ones that are invertible ---
-the isomorphisms. It follows then that the best structure-preserving
-$\Set$-valued functors are the representable ones. They are either
-the hom-functors or the functors that are naturally isomorphic to
-hom-functors. Any other functor $F$ is obtained from a
-hom-functor through a lossy transformation. Such a transformation may
-not only lose information, but it may also cover only a small part of
-the image of the functor $F$ in $\Set$.
+[^1]: 訳注: あるいはデカルト積。
+[^2]: 訳注: "every group is isomorphic to a permutation group of some set"をそのまま訳したが誤りだと思われる。正しくは、「任意の群はある集合の置換群のある部分群に同型である」。
+[^3]: 訳注: 普通は可逆圧縮/不可逆圧縮の場面で不可逆圧縮のことをlossy compressionとよんだりするので「不可逆」とよんだりするので「不可逆」とすべきだったかもしれませんが、数学でinvertibleが可逆と訳されておりよくわからなくなりそうなのでそのままlossyにしました。「情報を失なわない」だけだと普通は単射ということになると思いますが、この本ではlossyは全射性も要求しています。したがって、この本ではlossyでないことと可逆であることは完全に同じ意味なようです。
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
